--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -243,7 +243,7 @@ form{
     display: block;
     box-sizing: border-box;
     width:100%;
-    font-size: 1.5em;
+    font-size: 1.1em;
     padding: .7em;
     background: #eee;
     border: none;
@@ -316,8 +316,123 @@ p.has-account{
 
 }
 
-
-
 /******************************************************* 
-                MEDIA QUERY
+                SIGNUP PAGE STYLES
 ***********************************************************/
+
+#register-form-wrapper{
+    position: relative;
+    top: 3.6em;
+}
+
+#register-form{
+    background: #ccc;
+    width: 45%;
+    padding: .7em;
+    display: block;
+    height: 70%;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: .3em;
+    
+}
+
+  #form-content{
+      text-align: center;
+  }
+
+  .register-label{
+    display: block;
+    font-size:1em;
+    margin-bottom: .3em;
+    font-weight: bolder;
+  }
+
+  .register-input{
+    display: block;
+    box-sizing: border-box;
+    width:100%;
+    font-size: 1em;
+    padding: .5em;
+    background: #eee;
+    border: none;
+    border-bottom: 6px solid grey;
+    outline: none;
+    margin-bottom: 1em;
+    text-align:center;
+    justify-self: center;
+}
+
+.register-button{
+    padding: .3em;
+    width:30%;
+    font-size: 1em;
+    background: transparent;
+    border: 2px solid grey;
+    border-radius: 4px;
+    color:grey;
+    outline: none;
+    transition: .7s;
+    cursor: pointer;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.register-button:hover{
+    background: #aaa;
+    color: #eee;
+}
+
+ p.has-account{
+    margin: .6em;
+    font-size:1.2em;
+    font-weight: bolder;
+}
+
+.green{
+    border: 2px solid rgb(18, 121, 70);
+    color: rgb(18, 121, 70);
+}
+
+.green:hover{
+    background: rgb(18, 121, 70);
+    color: #eee;
+}
+
+.logo a{
+    text-decoration: none;
+    color:white;
+}
+
+@media(max-width:769px){
+
+    #register-form{
+        width:70%;
+    }
+
+    .register-input{
+        font-size:.8em;
+    }
+
+    .register-button{
+        width: 100%;
+        padding: .3em;
+    }
+   
+    input,label,button{
+        font-size:1em;
+    }
+
+    label{
+        font-weight: bold;
+    }
+
+    .register-block p.has-account{
+        font-size: .8em;
+        font-weight: bolder;
+    }
+
+
+}
+  
+
+
