--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -591,6 +591,8 @@ p.has-account{
     text-align: center;
     border-radius: 1em;
     border: 3px solid black;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
     background-color: #ddd;
 }
 
@@ -601,6 +603,10 @@ p.has-account{
   
 .container {
     border-top: 4px solid black;
+    background-color: #ddd;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+
 }
 .options{
     padding: 5px;
@@ -626,6 +632,15 @@ p.has-account{
 
 #meal-list > a{
     position: absolute;
+}
+
+.card-img{
+    object-fit:contain;
+}
+
+.card-img > img{
+    height: 104px;
+    width: 100%;
 }
 
 button.edit, button.delete{
