fixed width bug

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1119,7 +1119,7 @@ td {
 
 #confirmation-modal {
   background-color: rgba(0, 0, 0, 0.8);
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
   position: absolute;
   top: 0;
