--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -88,6 +88,11 @@ nav ul li a {
   border: 2px solid white;
   color: white;
   font-size: 1em;
+  background: rgba(238, 238, 238, 0.2);
+}
+
+#hero button:hover {
+  background: rgb(238, 238, 238);
 }
 
 #hero h1 {
@@ -100,6 +105,10 @@ button a {
 
 #hero button a {
   color: white;
+}
+
+#hero button:hover a {
+  color: #033d5f;
 }
 
 #card-list {
@@ -164,7 +173,7 @@ footer {
   nav ul li {
     box-sizing: border-box;
     width: 100%;
-    padding: 1.5em 0;
+    padding: 1.2em 0;
     text-align: center;
   }
 
@@ -178,7 +187,7 @@ footer {
   #card {
     margin-bottom: 1em;
     overflow-wrap: break-word;
-    border: 1px solid #565658;
+    border: 1px solid #0897ea;
     border-radius: 1em;
   }
 
@@ -188,6 +197,7 @@ footer {
 
   #hero {
     font-size: 1.5em;
+    padding: 0.5em;
   }
 
   #hero h1 {
@@ -245,7 +255,7 @@ input {
   padding: 0.7em;
   background: #eee;
   border: none;
-  border-bottom: 6px solid #166a9c;
+  border-bottom: 4px solid grey;
   /* border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: .9em;
@@ -301,6 +311,11 @@ p.has-account {
   color: #eee;
 }
 
+.signin a {
+  color: rgb(5, 236, 121);
+  font-size: 1.5em;
+}
+
 @media (max-width: 769px) {
   form {
     width: 80%;
@@ -337,7 +352,7 @@ p.has-account {
 }
 
 #register-form {
-  background: #ccc;
+  background: rgba(15, 15, 19, 0.5);
   width: 45%;
   padding: 0.7em;
   display: block;
@@ -366,7 +381,7 @@ p.has-account {
   padding: 0.5em;
   background: #eee;
   border: none;
-  border-bottom: 6px solid grey;
+  border-bottom: 4px solid grey;
   outline: none;
   margin-bottom: 1em;
   text-align: center;
@@ -376,7 +391,7 @@ p.has-account {
 .register-button {
   padding: 0.3em;
   width: 30%;
-  font-size: 1em;
+  font-size: 1.5em;
   background: transparent;
   border: 2px solid grey;
   border-radius: 4px;
@@ -391,12 +406,9 @@ p.has-account {
   background: #aaa;
   color: #eee;
 }
-.signin > a {
-  color: rgb(18, 121, 70);
-}
-
-.signin a:hover {
-  color: #eee;
+.register-block a {
+  color: rgb(5, 236, 121);
+  font-size: 1.5em;
 }
 
 p.has-account {
@@ -432,6 +444,7 @@ p.has-account {
   .register-button {
     width: 100%;
     padding: 0.3em;
+    font-size: 1.2em;
   }
 
   input,
@@ -475,15 +488,15 @@ p.has-account {
 }
 
 #add-meal button {
-  background: #ddd;
-  color: black;
-  border-color: black;
-  width: auto;
+  background: rgba(249, 255, 0, 0.2);
+  color: #f9ff00;
+  border-color: #f9ff00;
+  width: 20%;
 }
 
 #add-meal button:hover {
-  color: #eee;
-  background: black;
+  background: #f9ff00;
+  color: black;
 }
 
 .meal-button {
@@ -589,12 +602,11 @@ p.has-account {
 
 #meal-details h4 {
   font-size: 0.8em;
-  color:#eee;
+  color: #eee;
 }
 
 #meal-list > a {
   position: absolute;
-  
 }
 
 .card-img {
@@ -612,7 +624,7 @@ button.delete {
   font-size: 0.8em;
   margin: 3px;
   width: 36%;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 button.edit {
@@ -657,7 +669,7 @@ button.delete:hover {
   button.edit,
   button.delete {
     width: 36%;
-    padding: .5em;
+    padding: 0.5em;
   }
 }
 
@@ -707,14 +719,14 @@ button.delete:hover {
 
 .board-revenue {
   /* background: rgba(0, 128, 0,.3); */
-  border: 2px solid #00c300;
-  color: #00c300;
+  border: 2px solid #01ce1f;
+  color: #01ce1f;
 }
 
 .board-orders {
   /* background: rgba(255, 255, 0,.14); */
-  border: 2px solid #b9b902;
-  color: #b9b902;
+  border: 2px solid #f9ff00;
+  color: #f9ff00;
 }
 
 .board > h2 {
@@ -728,11 +740,11 @@ button.delete:hover {
 }
 
 .board-orders hr {
-  border: 2.5px solid #b9b902;
+  border: 2.5px solid #f9ff00;
   border-radius: 2em;
 }
 .board-revenue hr {
-  border: 2.5px solid #00c300;
+  border: 2.5px solid #01ce1f;
   border-radius: 2em;
 }
 
@@ -751,7 +763,7 @@ td {
 
 .board-table th {
   padding: 1em;
-  background: black;
+  background: #00000069;
   color: #eee;
 }
 .board-table td {
@@ -840,12 +852,15 @@ td {
 }
 
 #set-menu button {
-  border-color: black;
-  background: rgba(0, 0, 0, 0.4);
-  color: black;
-  width: auto;
+  background: rgba(249, 255, 0, 0.2);
+  color: #f9ff00;
+  border-color: #f9ff00;
+  width: 20%;
 }
-
+#set-menu button:hover {
+  background: #f9ff00;
+  color: black;
+}
 #menu-scroll {
   height: 250px;
   overflow: auto;
@@ -997,7 +1012,7 @@ td {
   transition: ease-in-out 1s;
 }
 #cart-content {
-  background: #ddd;
+  background: #18202fb5;
   position: relative;
   top: 15%;
   left: 50%;
@@ -1007,19 +1022,25 @@ td {
   height: 250px;
   overflow-y: auto;
   padding: 1em;
+  color: white;
   /* display: flex; */
   /* justify-content: space-around; */
 }
 
 #cart-content button {
-  width: auto;
+  width: 100%;
   font-size: 1em;
+  padding: 0.2em;
 }
 
 #cart-table {
-  width: 100px;
+  width: 250px;
   border: none;
   margin: 0 auto;
+}
+
+#cart-table thead {
+  background: black;
 }
 
 #cart-row {
@@ -1028,12 +1049,9 @@ td {
   border: none;
 }
 
-#cart-row button {
-  width: 100%;
-}
-
 #cart-row .buy {
-  padding: 0.2em 0.7em 0.2em 0.7em;
+  padding: 0.2em;
+  width: 100%;
 }
 .band {
   border-bottom: none;
@@ -1084,6 +1102,10 @@ td {
   #cart-row > input {
     width: 55%;
   }
+
+  #set-menu button {
+    width: auto;
+  }
 }
 
 /******************************************************* 
@@ -1114,7 +1136,7 @@ td {
 
 #order-table th {
   padding: 1em;
-  background: black;
+  background: #00000063;
   color: #eee;
 }
 #order-table td {
@@ -1187,7 +1209,7 @@ td {
 }
 
 #confirmation-content {
-  background: whitesmoke;
+  background: #18202fb5;
   padding: 1em;
   border-radius: 1em;
   width: 60%;
@@ -1195,6 +1217,7 @@ td {
   top: 15%;
   left: 50%;
   transform: translate(-50%, 0);
+  color: white;
 }
 #confirmation-content > h1 {
   font-size: 2.5em;
@@ -1225,6 +1248,10 @@ td {
     width: 60%;
   }
 
+  #order-body {
+    margin: 10px auto;
+  }
+
   #order-board table {
     padding: 0;
     width: 70%;
@@ -1232,10 +1259,11 @@ td {
   }
 
   #confirmation-content {
-    background: whitesmoke;
+    background: #18202fb5;
     padding: 1em;
     border-radius: 1em;
-    width: 100%;
+    width: 77%;
+    color: white;
   }
 
   #confirmation-content h1 {
